--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
+    "@types/mathjs": "0.0.34",
     "angular-in-memory-web-api": "~0.3.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
-    "mathjs": "^3.12.3",
+    "mathjs": "^3.13.1",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
@@ -59,7 +60,7 @@
     "protractor": "~4.0.14",
     "rimraf": "^2.5.4",
     "tslint": "^5.0.0",
-    "typescript": "~2.1.0"
+    "typescript": "^2.1.6"
   },
   "repository": {}
 }
