--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/jasmine": "2.5.36",
+    "@types/mathjs": "0.0.34",
     "@types/node": "^6.0.46",
     "canonical-path": "0.0.2",
     "codelyzer": "^3.0.1",
