--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "angular-quickstart",
   "version": "1.0.0",
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
+  "engines": {
+    "node": "6.9.2",
+    "npm": "3.10.10"
+  },
   "scripts": {
     "build": "tsc -p src/",
     "build:watch": "tsc -p src/ -w",
     "build:e2e": "tsc -p e2e/",
+    "build:aot": "ngc -p tsconfig-aot.json && rollup -c rollup-config.js",
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
+    "devstart": "concurrently \"npm run build:watch\" \"npm run serve\"",
+    "start": "npm run build:aot && node copy-dist-files.js && node server.js",
+    "postinstall": "ng build --prod",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
     "preprotractor": "webdriver-manager update",
@@ -24,18 +31,22 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@angular/cli": "^1.1.0",
     "@angular/common": "~4.0.0",
     "@angular/compiler": "~4.0.0",
+    "@angular/compiler-cli": "^4.1.3",
     "@angular/core": "~4.0.0",
     "@angular/forms": "~4.0.0",
     "@angular/http": "~4.0.0",
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
+    "@angular/platform-server": "^4.1.3",
     "@angular/router": "~4.0.0",
     "@types/mathjs": "0.0.34",
     "angular-in-memory-web-api": "~0.3.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "express": "^4.15.3",
     "mathjs": "^3.13.1",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
@@ -60,8 +71,12 @@
     "lodash": "^4.16.4",
     "protractor": "~4.0.14",
     "rimraf": "^2.5.4",
+    "rollup": "^0.42.0",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
     "tslint": "^5.0.0",
-    "typescript": "^2.1.6"
+    "typescript": "^2.3.4"
   },
   "repository": {}
 }
