--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 8081",
-    "test": "karma start",
+    "test": "karma start --auto-watch",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail"
   },
   "keywords": [],
